<package>
  <name>mbs_waypoint_follower</name>
  <version>0.3.0</version>
  <description> mbs_waypoint_follower </description>
  <maintainer email="tahir.mehmood@mybotshop.de">Tahir Mehmood</maintainer>
  <author email="tahir.mehmood@mybotshop.de">Tahir Mehmood</author>
  <license>private</license>
  <url type="website">https://mybotshop.de</url>
  <url type="repository">https://mybotshop.de</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>husky_control</run_depend>


</package>
